* 2013-12-03 - thorben.betten@open-xchange.com

 - Fix for bug 30144: Properly set login mappings (no "null" strings) in case autocontextid is active

* 2013-10-31 - thorben.betten@open-xchange.com

 - Fix for bug 29612: Possible to set user attributes via SOAP (patch provided by choeger)

* 2013-10-11 - thorben.betten@open-xchange.com

 - Fix for bug 29251: Push back read-write connection into pool using after-reading flag

* 2013-10-07 - thorben.betten@open-xchange.com

 - Fix for bug 29160: Examine passed String via SOAP to be not empty (not null and length greater than 0)
 - Fix for bug 20582: Perform an ignore-case equality check for E-Mail addresses

* 2013-09-16 - choeger@open-xchange.com

 - Fix for bug 28830: oxsysreport is collecting unneeded protected data

* 2013-08-08 - choeger@open-xchange.com

 - Fix for bug 28157: generatempasswd returns "0" even if it fails

* 2013-06-12 - thorben.betten@open-xchange.com

 - Fix for bug 26164: Accept other boolean identifiers like "true","1","yes","y", and "on"

* 2012-12-12 - thorben.betten@open-xchange.com

 - Fix for bug 24158: Made master password optional

* 2012-07-18 - choeger@open-xchange.com

 - Fix for bug 22581: oxinstaller memory parsing should be more fault-tolerant

* 2012-07-03 - thorben.betten@open-xchange.com

 - Fix for bug 21743: Retry on detected MySQL deadlock

* 2012-06-06 - marcus.klein@open-xchange.com

 - Fix for bug 22263: RequireBundle is still necessary for com.openexchange.admin & com.openexchange.admin.plugin.hosting bundles.

* 2012-05-24 - marcus.klein@open-xchange.com

 - Fix for bug 22189: Removed stale reference to RMI.properties configuration file.

* 2012-05-24 - jan.bauerdick@open-xchange.com

 - Register RMI in the OSGI system

* 2012-05-23 - marcus.klein@open-xchange.com

 - Fix for bug 22163: Using cache write through for context to database assignment to prevent missing information while reading from slave.

* 2012-05-04 - marcus.klein@open-xchange.com
